# vn_competitor_event_data_system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  pytest.ini
deploy/docker/: docker-compose.yml  pipeline.env  pipeline.env.example  run_vm_pipeline.sh  vm.env.example  vm.local.env  vn-event-dw-pipeline.cron.example  vn-event-dw-pipeline.service.example  vn-event-dw-pipeline.timer.example
deploy/ubuntu/: run_api_ngrok.sh  vn-event-dw-api-ngrok.service  vn-event-dw-api.env.example
docs/: api.md  api_technical_spec.md  deploy_ubuntu_vm.md  deploy_ubuntu_vm_docker.md  socialdata_connector_claude_prompt.md  socialdata_connector_handoff.md  socialdata_huong_dan_agent_vi.md  socialdata_huong_dan_nguoi_dung_vi.md
examples/: config.json  fb_posts.csv  st_app_update.csv  st_version.csv
examples/fb_posts/: FBfanpage_DTCLVN_260101_260531.csv  FBfanpage_FootballProVTC_260101_260531.csv  FBfanpage_MobileLegendsGameVN_260101_260531.csv  FBfanpage_PUBGMobileVN_260101_260531.csv  FBfanpage_TotalFootballVN_260101_260531.csv  FBfanpage_beaprovtcgame_260101_260531.csv  README.md  (+3 more)
handoff/: socialdata_standalone.rar
local_secrets/: README.md
scripts/: socialdata_mint_google_access_token.mjs
tests/: test_api.py  test_cli.py  test_config.py  test_environment.py  test_fb_event_ai.py  test_fb_event_pipeline.py  test_fb_posts_aliases.py  test_fb_posts_ingest.py  test_sensortower_raw.py  test_socialdata.py  test_socialdata_sync.py  test_st_update_events.py  test_st_version_events.py
vn_event_dw/: __init__.py
(+30 files in other folders)
