[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vn-event-dw"
version = "0.1.0"
description = "Mini event data warehouse with ETL flow"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "google-auth>=2.0",
    "pyngrok>=8.1",
    "rapidfuzz>=3.0",
    "uvicorn>=0.30",
]

[project.scripts]
vn-event-dw = "vn_event_dw.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
